--- a/package.json
+++ b/package.json
@@ -8,7 +8,13 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "clipboard": "^2.0.11",
     "core-js": "^3.6.5",
+    "element-ui": "^2.12.0",
+    "less": "^3.10.3",
+    "less-loader": "^5.0.0",
+    "svg-sprite-loader": "^6.0.11",
+    "svgo": "^2.8.0",
     "vue": "^2.6.11"
   },
   "devDependencies": {
